--- a/static/LearnMore.html
+++ b/static/LearnMore.html
@@ -47,7 +47,7 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item ">
-          <a class="nav-link" href="../templates/index.html">Home</a>
+          <a class="nav-link"  href="/">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="../static/about.html">About</a>
