about, more page updated

--- a/static/LearnMore.html
+++ b/static/LearnMore.html
@@ -6,11 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn More | HOPE</title>
+    <link rel="icon" href="../static/images/title.ico" type="image/x-icon">
 
+
+    <!-- google-fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Nunito+Sans:wght@600&display=swap"
         rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
 
     <link rel="icon" href="../static/images/page_title_icon.png" type="image/x-icon">
@@ -35,36 +41,40 @@
 <body class="cnew">
 
     <!-- navbar -->
-  <nav class="navbar navbar-dark  navbar-expand-lg fixed-top opaque-navbar">
-    <a class="navbar-brand" href="#">
-      <!-- <img src="your-logo.png" alt="Your Company Logo"> -->
-      <h3>HOPE</h3>
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item ">
-          <a class="nav-link"  href="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="../static/about.html">About</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Learn More</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+    <nav class="navbar navbar-dark  navbar-expand-lg fixed-top opaque-navbar">
+        <a class="navbar-brand d-flex align-items-center" href="../templates/index.html">
+            <img class="logo" height="40rem%" src="../static/images/hope-nav-logo.png" alt="Your Company Logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item ">
+                    <a class="nav-link" href="../templates/index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../static/about.html">About</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Learn More</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-    <div class="container-fluid text-center">
-        <h1 class="heading" style="margin-top: 50px; padding-top: 50px;">Hear Attack, Stroke and Cardiac Arrest symptoms</h1>
-        <h2 class="subheading" style="color:rgb(221, 42, 42)">If these warning signs are present, please consult a
+    <div class="container-fluid text-center text-with-background">
+        <h1 class="heading"
+            style="margin-top: 70px; padding-top: 50px; margin-bottom: 50px; padding-bottom: 50px; font-family: 'Bebas Neue', sans-serif;
+            letter-spacing: 1px; text-size-adjust: 20px;">
+            Heart Attack, Stroke and Cardiac Arrest symptoms</h1>
+
+    </div>
+    <div class="container-fluid text-center ">
+        <h2 class="subheading mt-5 mb-3" style="color:rgb(221, 42, 42) ;font-family: 'Bebas Neue', sans-serif; size:2px
+        letter-spacing: 1px;">If these warning signs are present, please
+            consult a
             doctor.</h2>
     </div>
 
@@ -181,7 +191,6 @@
         </div>
     </div>
 
-    <!-- Footer -->
     <footer class="page-footer font-small blue pt-4 info-color">
 
         <!-- Footer Links -->
@@ -192,8 +201,9 @@
 
                 <div class="col-md-6 mt-md-0 mt-3">
                     <!-- Content -->
-                    <h5 class="text-uppercase">Footer Content</h5>
-                    <p>Here you can use rows and columns to organize your footer content.</p>
+                    <img src="../static/images/hope-icononly-white.png" alt="">
+                    <h5 class="text-uppercase">Team HOPE</h5>
+                    <p>Predicting Heart Disease for Proactive Care</p>
 
                 </div>
                 <!-- Grid column -->
@@ -227,20 +237,16 @@
                 <div class="col-md-3 mb-md-0 mb-3">
 
                     <!-- Links -->
-                    <h5 class="text-uppercase">Links</h5>
+                    <h5 class="text-uppercase">Contributers</h5>
 
                     <ul class="list-unstyled">
                         <li>
-                            <a href="#!">Link 1</a>
+                            <a href="#!">Akash Parida</a>
+                        <li>
+                            <a href="#!">Animesh Padhy</a>
                         </li>
                         <li>
-                            <a href="#!">Link 2</a>
-                        </li>
-                        <li>
-                            <a href="#!">Link 3</a>
-                        </li>
-                        <li>
-                            <a href="#!">Link 4</a>
+                            <a href="#!">Tanuj Manuprit Xalxo</a>
                         </li>
                     </ul>
 
